devopsified-output/devopsify-example-app/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devopsify-example-app
  labels:
    app: devopsify-example-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devopsify-example-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: devopsify-example-app
    spec:
      containers:
        - name: devopsify-example-app
          image: devopsify-example-app:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: 250m
              memory: 256Mi
            limits:
              cpu: 250m
              memory: 256Mi
          livenessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 15
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10
