devopsified-output/devopsify-example-app/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devopsify-example-app
  labels:
    app: devopsify-example-app
spec:
  selector:
    app: devopsify-example-app
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
